ffmpeg (7:2.5-1) UNRELEASED; urgency=medium

  * Import new major upstream release 2.4.
  * Update debian/changelog.
  * Add new symbols to the symbols files.

 -- Andreas Cadhalpun <Andreas.Cadhalpun@googlemail.com>  Fri, 05 Dec 2014 00:15:48 +0100

ffmpeg (7:2.4.4-1) unstable; urgency=medium

  * New upstream bugfix release 2.4.4.
  * Drop fix-hppa-tests.patch included upstream.
  * Do not enable gnutls on sparc64 and libzvbi on m68k, because they are
    not available there. Thanks to Carl Eugen Hoyos.
  * Do not enable libsdl and libvpx on x32, because they are not available.
  * Add explicit build-dependencies on libfontconfig1-dev, libfreetype6-dev,
    libgl1-mesa-dev, libpulse-dev and libxext-dev.
  * Add build-dependency on libx265-dev on the architectures, where it is
    already available.

 -- Andreas Cadhalpun <Andreas.Cadhalpun@googlemail.com>  Wed, 03 Dec 2014 00:29:36 +0100

ffmpeg (7:2.4.3-1) unstable; urgency=medium

  * Import new upstream bugfix release 2.4.3.
     - Refresh Change-symbol-versioning.patch.
     - Add new symbols to the libavdevice symbols file.
  * Enable libbs2b on arm64, since it is now available.
  * Disable frei0r and libx264 on x32, libsoxr and openal on sparc64
    and libopencv on m68k, sh4, sparc64 and x32, because they are not
    (yet) avialable there.
  * Disable assembler optimizations on x32, as they wouldn't work there.
  * Include config.log in the build-log, when compiling fails.
  * Add fix-hppa-tests.patch to work around a gcc bug on hppa.

 -- Andreas Cadhalpun <Andreas.Cadhalpun@googlemail.com>  Wed, 05 Nov 2014 01:18:23 +0100

ffmpeg (7:2.4.2-1) unstable; urgency=medium

  * Import new upstream bugfix release 2.4.2.
  * Drop tests_Cat-err-file-in-case-of-error.patch included upstream.
  * Disable assembler optimizations on armel to fix the tests.

 -- Andreas Cadhalpun <Andreas.Cadhalpun@googlemail.com>  Mon, 06 Oct 2014 21:13:39 +0200

ffmpeg (7:2.4.1-1) unstable; urgency=medium
